--- a/addons/music_manager/views/music_manager_artist_views.xml
+++ b/addons/music_manager/views/music_manager_artist_views.xml
@@ -71,28 +71,54 @@
             <field name="name">music_manager.artist.view.form</field>
             <field name="model">music_manager.artist</field>
             <field name="arch" type="xml">
-                <form>
+                <form string="Artist">
                     <sheet>
                         <header>
                             <h1><field name="display_title"/></h1>
                         </header>
+                        <div class="d-flex flex-row justify-content-start">
+                            <div class="mx-3">
+                                <field name="picture" string="" widget="image" options="{'preview_image': 'picture', 'size': [200, 200]}"/>
+                            </div>
+                            <div class="mx-3" style="border-left: 1px solid #ccc; height: auto;"> </div>
+                            <div class="d-flex flex-column justify-content-between w-100">
+                                <group>
+                                    <field name="name" string="Name"/>
+                                    <field name="real_name" string="Real name"/>
+                                    <field name="birthdate" string="Birthdate"/>
+                                </group>
+                                <button name="update_songs" string="Update metadata" class="btn-outline-primary w-25" type="object"/>
+                            </div>
+                        </div>
                         <separator/>
-                        <group>
-                            <group>
-                                <field name="name" string="Name"/>
-                                <field name="real_name" string="Real name"/>
-                                <field name="birthdate" string="Birthdate"/>
-                            </group>
-                            <group>
-                                <field name="picture" string="" class="oe_avatar" widget="image" options="{'preview_image': 'picture'}"/>
-                            </group>
-                        </group>
                         <notebook>
-                            <page string="Songs">
-                                <field name="track_ids" readonly="True"/>
-                            </page>
                             <page string="Albums">
-                                <field name="album_ids" readonly="True"/>
+                                <field name="album_ids" readonly="True">
+                                    <tree>
+                                        <field name="cover" string="Cover" widget="image" options="{'preview_image': 'cover', 'size': [28]}"/>
+                                        <field name="name" string="Title"/>
+                                        <field name="album_artist_id" string="Album artist"/>
+                                        <field name="track_amount" string="Track amount"/>
+                                        <field name="disk_amount" string="Disk amount" optional="hide"/>
+                                        <field name="genre_id" string="Genre"/>
+                                        <field name="year" string="Year"/>
+                                    </tree>
+                                </field>
+                            </page>
+                            <page string="Tracks">
+                                <field name="track_ids" readonly="True">
+                                    <tree decoration-danger="is_deleted" decoration-warning="not is_saved">
+                                        <field name="track_no" string="Track no" optional="hide"/>
+                                        <field name="name" string="Title"/>
+                                        <field name="album_artist_id" string="Album artist"/>
+                                        <field name="album_id" string="Album"/>
+                                        <field name="year" string="Year"/>
+                                        <field name="genre_id" string="Genre"/>
+                                        <field name="duration" string="Duration"/>
+                                        <field name="is_saved" column_invisible="True"/>
+                                        <field name="is_deleted" column_invisible="True"/>
+                                    </tree>
+                                </field>
                             </page>
                         </notebook>
                     </sheet>
