--- a/addons/music_manager/views/music_manager_artist_views.xml
+++ b/addons/music_manager/views/music_manager_artist_views.xml
@@ -83,9 +83,9 @@
                             <div class="mx-3" style="border-left: 1px solid #ccc; height: auto;"> </div>
                             <div class="d-flex flex-column justify-content-between w-100">
                                 <group>
-                                    <field name="name" string="Name"/>
-                                    <field name="real_name" string="Real name"/>
-                                    <field name="birthdate" string="Birthdate"/>
+                                    <field name="name" string="Group or artist name"/>
+                                    <field name="real_name" string="Members"/>
+                                    <field name="birthdate" string="Founded"/>
                                 </group>
                                 <button name="update_songs" string="Update metadata" class="btn-outline-primary w-25" type="object"/>
                             </div>
