[UPDATE] views: Now user knows who create genres.

--- a/addons/music_manager/views/music_manager_genre_views.xml
+++ b/addons/music_manager/views/music_manager_genre_views.xml
@@ -16,6 +16,7 @@
                     <field name="name" string="Name"/>
                     <field name="track_amount" string="Track amount"/>
                     <field name="disk_amount" string="Disk amount"/>
+                    <field name="user_id" string="Added by"/>
                 </tree>
             </field>
         </record>
