--- a/addons/music_manager/views/music_manager_artist_views.xml
+++ b/addons/music_manager/views/music_manager_artist_views.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <data>
-        <record id="music_manager_artist_view_action" model="ir.actions.act_window">
+        <record id="music_manager_artist_view_action_general" model="ir.actions.act_window">
             <field name="name">Artist</field>
             <field name="res_model">music_manager.artist</field>
-            <field name="view_mode">kanban,tree,form</field>
+            <field name="view_mode">kanban,form</field>
+            <field name="groups_id" eval="[(6, 0, [ref('music_manager.group_music_manager_user_general')])]"/>
+        </record>
+
+        <record id="music_manager_artist_view_action_admin" model="ir.actions.act_window">
+            <field name="name">Artist</field>
+            <field name="res_model">music_manager.artist</field>
+            <field name="view_mode">tree,form</field>
+            <field name="groups_id" eval="[(6, 0, [ref('music_manager.group_music_manager_user_admin')])]"/>
         </record>
 
         <!-- Kanban view -->
@@ -13,18 +21,14 @@
             <field name="model">music_manager.artist</field>
             <field name="arch" type="xml">
                 <kanban>
-                    <field name="to_delete"/>
                     <template>
                         <t t-name="kanban-box">
                             <div class="oe_kanban_global_click" style="box-shadow: 0 2px 6px rgba(0,0,0,0.2);">
                                 <div class="o_kanban_record_title d-flex flex-row justify-content-between">
-                                    <field name="name"/>
-                                    <button name="set_to_delete" type="object" class="oe_stat_button" help="Set to delete">
-                                        <div>
-                                            <i t-if="record.to_delete.raw_value" class="fa fa-trash text-danger"/>
-                                            <i t-else="" class="fa fa-trash-o"/>
-                                        </div>
-                                    </button>
+                                    <div class="d-flex flex-column">
+                                        <field name="name"/>
+                                        <p class="text-muted"><small><em>by <field name="create_uid"/></em></small></p>
+                                    </div>
                                 </div>
                                 <hr class="mb-2"/>
                                 <div class="o_kanban_content d-flex flex-row">
@@ -54,15 +58,14 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="picture" string="Picture" widget="image" options="{'preview_image': 'cover', 'size': [28]}" optional="hide"/>
-                    <field name="name" string="Name"/>
+                    <field name="name" string="Artist or Group"/>
                     <field name="real_name" string="Real name"/>
                     <field name="founded_in" string="Founded in" optional="hide"/>
                     <field name="track_amount" string="Total tracks"/>
                     <field name="album_amount" string="Total albums"/>
-                    <field name="user_id" string="Added by"/>
-                    <field name="to_delete" column_invisible="True"/>
-                    <button name="set_to_delete" type="object" class="oe_stat_button" help="Set to delete" icon="fa-trash text-danger" invisible="to_delete == False"/>
-                    <button name="set_to_delete" type="object" class="oe_stat_button" help="Set to delete" icon="fa-trash-o" invisible="to_delete == True"/>
+                    <field name="create_uid" string="Owner"/>
+                    <field name="create_date" string="Create date"/>
+                    <field name="write_uid" string="Last update"/>
                 </tree>
             </field>
         </record>
