--- a/addons/music_manager/views/music_manager_menus.xml
+++ b/addons/music_manager/views/music_manager_menus.xml
@@ -4,13 +4,13 @@
     <menuitem id="music_manager_menu_root" name="Music Manager"/>
 
     <!-- Submenus -->
-    <menuitem id="music_manager_music_menu" name="My music" parent="music_manager_menu_root"/>
+    <menuitem id="music_manager_music_menu" name="Music" parent="music_manager_menu_root"/>
 
     <!-- Actions User General -->
-    <menuitem id="music_manager_music_menu_song_action_general" name="Songs" parent="music_manager_music_menu" action="music_manager_track_view_action_general" groups="music_manager.group_music_manager_user_general"/>
-    <menuitem id="music_manager_music_menu_artist_action_general" name="Artists" parent="music_manager_music_menu" action="music_manager_artist_view_action_general" groups="music_manager.group_music_manager_user_general"/>
-    <menuitem id="music_manager_music_menu_album_action_general" name="Albums" parent="music_manager_music_menu" action="music_manager_album_view_action_general" groups="music_manager.group_music_manager_user_general"/>
-    <menuitem id="music_manager_music_menu_genre_action_general" name="Genres" parent="music_manager_music_menu" action="music_manager_genre_view_action_general" groups="music_manager.group_music_manager_user_general"/>
+    <menuitem id="music_manager_music_menu_song_action_general" name="My songs" parent="music_manager_music_menu" action="music_manager_track_view_action_general" groups="music_manager.group_music_manager_user_general"/>
+    <menuitem id="music_manager_music_menu_artist_action_general" name="My artists" parent="music_manager_music_menu" action="music_manager_artist_view_action_general" groups="music_manager.group_music_manager_user_general"/>
+    <menuitem id="music_manager_music_menu_album_action_general" name="My albums" parent="music_manager_music_menu" action="music_manager_album_view_action_general" groups="music_manager.group_music_manager_user_general"/>
+    <menuitem id="music_manager_music_menu_genre_action_general" name="My genres" parent="music_manager_music_menu" action="music_manager_genre_view_action_general" groups="music_manager.group_music_manager_user_general"/>
 
     <!-- Actions User Admin -->
     <menuitem id="music_manager_music_menu_song_action_admin" name="Songs" parent="music_manager_music_menu" action="music_manager_track_view_action_admin" groups="music_manager.group_music_manager_user_admin"/>
