--- a/addons/music_manager/views/music_manager_genre_views.xml
+++ b/addons/music_manager/views/music_manager_genre_views.xml
@@ -47,7 +47,7 @@
                             <page string="Albums">
                                 <field name="album_ids" readonly="True">
                                     <tree>
-                                        <field name="cover" string="Cover" widget="image" options="{'preview_image': 'cover', 'size': [28]}"/>
+                                        <field name="picture" string="Cover" widget="image" options="{'preview_image': 'picture', 'size': [28]}"/>
                                         <field name="name" string="Title"/>
                                         <field name="album_artist_id" string="Album artist"/>
                                         <field name="track_amount" string="Track amount"/>
